--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
-    "pg": "^8.13.2",
-    "prisma": "^6.3.1"
+    "pg": "^8.13.2"
+  },
+  "devDependencies": {
+    "prisma": "^6.4.0"
   }
 }
